--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "clumsy/assets",
-    "description": "",
+    "description": "Laravel asset loader",
+    "keywords": ["laravel", "assets", "javascript", "json", "css"],
+    "license": "MIT",
     "authors": [
         {
             "name": "Tomas Buteler",
@@ -8,12 +10,17 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
+        "php": ">=5.3.0"
     },
     "autoload": {
         "psr-0": {
             "Clumsy\\Assets": "src/"
         }
     },
-    "minimum-stability": "stable"
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.x-dev"
+        }
+    },
+    "minimum-stability": "dev"
 }
