--- a/composer.json
+++ b/composer.json
@@ -10,16 +10,16 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "laravel/framework": "5.1.*"
     },
     "autoload": {
-        "psr-0": {
+        "psr-4": {
             "Clumsy\\Assets": "src/"
         }
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.6.0-dev"
+            "dev-master": "0.7.0-dev"
         }
     },
     "minimum-stability": "dev"
